--- a/iRobotKinect.csproj
+++ b/iRobotKinect.csproj
@@ -28,7 +28,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationRevision>2</ApplicationRevision>
     <ApplicationVersion>0.0.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -100,9 +100,11 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -122,6 +124,12 @@
     <Compile Include="DepthSmoothing\CreateSmoothImageFromDepthArray.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FileIO\CMDLineParser.cs" />
+    <Compile Include="FileIO\CsvReader.cs" />
+    <Compile Include="FileIO\DatabaseTools.cs" />
+    <Compile Include="FileIO\IOTools.cs" />
+    <Compile Include="FileIO\StringConverter.cs" />
+    <Compile Include="FileIO\Trace.cs" />
     <Compile Include="iRobot\Config_Settings.cs" />
     <Compile Include="Boneyard\frmConnection_Details.cs">
       <SubType>Form</SubType>
@@ -184,6 +192,9 @@
       <DependentUpon>frmVirtual.cs</DependentUpon>
     </Compile>
     <Compile Include="Boneyard\Line_2D.cs" />
+    <Compile Include="iRobot\SplashScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="KinectCtrl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -264,6 +275,14 @@
     <Compile Include="Math\NumericComparer.cs" />
     <Compile Include="Math\SavitzkyGolayFilter.cs" />
     <Compile Include="Math\TriDiagonalMatrix.cs" />
+    <Compile Include="Other\Bindings.cs" />
+    <Compile Include="Other\ExceptionHandling.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Other\RegularExpression.cs" />
+    <Compile Include="Other\SendEmail.cs" />
+    <Compile Include="Other\SingleInstance.cs" />
+    <Compile Include="Other\USBNotificiation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoombaSCI\Macro.cs" />
@@ -272,6 +291,8 @@
     <Compile Include="RoombaSCI\Sensors.cs" />
     <Compile Include="RoombaSCI\Timer.cs" />
     <Compile Include="RoombaSCI\Types.cs" />
+    <Compile Include="Utilities\DisplayTools.cs" />
+    <Compile Include="Utilities\GuiHelper.cs" />
     <Compile Include="Utilities\Log.cs" />
     <EmbeddedResource Include="Boneyard\frmConnection_Details.resx">
       <SubType>Designer</SubType>
@@ -313,6 +334,7 @@
       <SubType>Designer</SubType>
       <DependentUpon>frmVirtual.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="iRobot\SplashScreen.resx" />
     <EmbeddedResource Include="KinectCtrl.resx">
       <DependentUpon>KinectCtrl.cs</DependentUpon>
     </EmbeddedResource>
@@ -334,9 +356,9 @@
       <SubType>Designer</SubType>
       <DependentUpon>frmSensors.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="iRobot\frmStart.resx">
+    <EmbeddedResource Include="iRobot\MainForm.resx">
       <SubType>Designer</SubType>
-      <DependentUpon>frmStart.cs</DependentUpon>
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Boneyard\frmStatistics.resx">
       <SubType>Designer</SubType>
@@ -365,11 +387,11 @@
     <Compile Include="iRobot\frmSensors.Designer.cs">
       <DependentUpon>frmSensors.cs</DependentUpon>
     </Compile>
-    <Compile Include="iRobot\frmStart.cs">
+    <Compile Include="iRobot\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="iRobot\frmStart.Designer.cs">
-      <DependentUpon>frmStart.cs</DependentUpon>
+    <Compile Include="iRobot\MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Boneyard\frmStatistics.cs">
       <SubType>Form</SubType>
